--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <button
           class="bg-white hover:bg-gray-50 border border-gray-300 px-8 py-3 rounded-full font-medium"
         >
-          Как это работает
+          <a href="#work">Как это работает</a>
         </button>
       </div>
 
@@ -185,7 +185,7 @@
             <button
               class="bg-[#FFFFFF] border-2 border-[#444A4B] text-[#444A4B] px-6 py-2 rounded-[113px] text-base leading-[30px]"
             >
-              Ваш ассистент для выгоды времени
+              <a href="#"> Ваш ассистент для выгоды времени </a>
             </button>
           </div>
 
@@ -203,7 +203,7 @@
           <button
             class="open-button text-white px-8 py-3 rounded-full font-medium w-fit"
           >
-            Перейти к боту
+            <a href="#"> Перейти к боту </a>
           </button>
         </div>
 
@@ -337,7 +337,7 @@
             <button
               class="bg-[#FFFFFF] border-2 border-[#444A4B] text-[#444A4B] px-4 lg:px-6 py-2 rounded-[113px] text-sm lg:text-base leading-[30px]"
             >
-              Для любых сделок
+              <a href="#"> Для любых сделок </a>
             </button>
           </div>
 
@@ -358,7 +358,7 @@
           <button
             class="open-button text-white px-8 py-3 rounded-full font-medium w-full lg:w-fit mx-auto lg:mx-0"
           >
-            Помочить сделку
+            <a href="#"> Помочить сделку </a>
           </button>
         </div>
 
@@ -503,7 +503,7 @@
           </p>
 
           <button class="section-5-button open-button">
-            Начать отслеживание
+            <a href="#"> Начать отслеживание </a>
           </button>
         </div>
 
@@ -739,7 +739,7 @@
             <button
               class="open-button bg-[#6DB393] hover:bg-[#5aa684] text-white px-8 py-3 rounded-full font-medium"
             >
-              Начать бесплатно
+              <a href="#"> Начать бесплатно </a>
             </button>
           </div>
 
