--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header
-      class="bg-white max-w-7xl mx-auto flex items-center justify-between py-[8px] pr-[8px] rounded-[120px]"
+      class="border-4 border-[red] bg-white max-w-7xl mx-auto flex items-center justify-between py-[8px] pr-[8px] rounded-[120px]"
     >
       <img src="image/Прозрачный фон.svg" alt="" class="h-[38px] lg:h-[46px]" />
       <nav>
@@ -35,7 +35,7 @@
     </header>
     <!-- section -->
     <section
-      class="bg-[#fff] mt-4 text-center py-16 max-w-7xl mx-3 hero flex-column gap-[28px] rounded-[30px] relative overflow-hidden"
+      class="border-4 border-[red] bg-[#fff] mt-4 text-center py-16 max-w-7xl mx-auto hero flex-column gap-[28px] rounded-[30px] relative overflow-hidden"
     >
       <!-- Orqa fon rasmi -->
       <img
@@ -95,13 +95,13 @@
     <!-- Section 2 - Как работает бот -->
     <section
       id="work"
-      class="bg-[#ECEFEC] mt-4 text-left px-4 py-16 max-w-7xl rounded-[30px]"
+      class="border-4 border-[red] bg-[#ECEFEC] mt-4 text-left py-16 max-w-7xl mx-auto rounded-[30px] contron-all-sec"
     >
       <div
         class="flex flex-col-reverse lg:grid lg:grid-cols-2 gap-12 items-center"
       >
         <!-- Left Side - Text Content -->
-        <div class="order-1 lg:order-1 lg:ml-[-20px]">
+        <div class="order-1 lg:order-1">
           <h2 class="text-[44px] font-bold text-[#444A4B] mb-3 leading-tight">
             Как работает бот
           </h2>
@@ -179,7 +179,7 @@
         </div>
 
         <!-- Right Side - Image -->
-        <div class="order-2 lg:order-2 flex justify-center lg:mr-[-20px]">
+        <div class="order-2 lg:order-2 flex justify-center">
           <img src="image/Frame 2085660760.png" alt="Telegram Bot Interface" />
         </div>
       </div>
@@ -188,7 +188,7 @@
     <!-- Section 3 - Что умеет бот -->
     <section
       id="possibility"
-      class="bg-[#ECEFEC] mt-4 px-0 py-16 max-w-7xl mx-3 rounded-[30px]"
+      class="border-4 border-[red] bg-[#ECEFEC] mt-4 px-0 py-16 max-w-7xl mx-auto rounded-[30px] contron-all-sec"
     >
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
         <!-- Left Side - Text Content -->
@@ -293,11 +293,11 @@
 
     <!-- Section 4 - Кому полезен бот -->
     <section
-      class="bg-[#ECEFEC] mt-4 px-0 py-12 lg:py-16 max-w-7xl mx-3 rounded-[30px]"
+      class="border-4 border-[red] bg-[#ECEFEC] mt-4 px-0 py-12 lg:py-16 max-w-7xl mx-auto rounded-[30px] contron-all-sec"
     >
       <div class="flex flex-col lg:grid lg:grid-cols-2 gap-8 lg:gap-12">
         <!-- Text Content - MOBILE DA BIRINCHI -->
-        <div class="flex flex-col justify-center lg:order-2 lg:ml-[200px]">
+        <div class="flex flex-col justify-center lg:order-2 lg:ml-[180px]">
           <div class="inline-block mb-6 mx-auto lg:mx-0">
             <button
               class="bg-[#FFFFFF] border-[1px] border-[#444A4B] text-[#444A4B] px-4 lg:px-6 py-2 rounded-[113px] text-sm lg:text-base leading-[30px] hover:bg-[#6DB3931A] h-[28px] flex items-center"
@@ -403,7 +403,9 @@
       </div>
     </section>
     <!-- Section 5 - Узнайте, когда дешевле -->
-    <section class="relative section-5 max-w-7xl !mx-3 px-4">
+    <section
+      class="border-4 border-[red] relative section-5 max-w-7xl mx-auto px-4 contron-all-sec"
+    >
       <div class="z-10 relative section-5-container">
         <!-- Left Side - Text Content -->
         <div class="section-5-content">
@@ -434,7 +436,7 @@
     <!-- 6 -->
     <section
       id="questions"
-      class="mx-3 bg-[#FFF] rounded-[30px] py-12 lg:py-16 max-w-7xl mt-[60px]"
+      class="border-4 border-[red] bg-[#FFF] rounded-[30px] py-12 lg:py-16 max-w-7xl mx-auto mt-[60px] contron-all-sec"
     >
       <div class="max-w-4xl mx-auto px-4">
         <!-- Header -->
@@ -636,7 +638,7 @@
     </section>
 
     <!-- CTA Section -->
-    <section class="mt-20 mx-3">
+    <section class="mt-20 border-4 border-[red] contron-all-sec">
       <div class="relative">
         <!-- White content div -->
         <div
@@ -648,14 +650,13 @@
             <!-- Left -->
             <div class="text-center lg:text-left lg:ml-[60px]">
               <h2
-                class="!text-[32px] lg:!text-[45px] font-bold text-[#444A4B] mb-8"
+                class="!text-[32px] lg:!text-[45px] font-bold text-[#444A4B] mb-8 mx-auto"
               >
                 Упростите свою жизнь с помощью бота
               </h2>
 
               <p
-                class="text-[#787878] text-[14px] lg:text-[16px] mb-8 max-w-lg mx-auto lg:mx-0"
-                style="width: 300px"
+                class="last-text-p text-[#787878] !text-[14px] !lg:text-[16px] mb-8 max-w-lg mx-auto lg:mx-0 lg:w-[391px] w-[300px]"
               >
                 Начните прямо сейчас. Откройте бота и получите мгновенный доступ
                 к лучшим предложениям.
@@ -677,7 +678,7 @@
                 <strong class="font-medium text-[#32343E]"
                   >Помогаю не переплатить</strong
                 >
-                <p class="text-[#787878] text-[1px] lg:text-xs mt-1">
+                <p class="text-[#787878] text-[10px] w-[154px] lg:text-xs mt-1">
                   Подсказываю, когда цена ниже средней.
                 </p>
               </div>
@@ -689,7 +690,7 @@
                 <strong class="font-medium text-[#32343E]"
                   >Нахожу лучшие цены</strong
                 >
-                <p class="text-[#787878] mt-1">
+                <p class="text-[#787878] mt-1 text-[10px] w-[154px]">
                   Сравниваю стоимость и показываю, где выгоднее.
                 </p>
               </div>
